# cel-python

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml  ci.yml  ci.yml~
benches/: complex_expression.py  large_resource_set.py
demo/: C7NRewrite.ipynb  C7N_Rewrite.ipynb  CEL-demo.ipynb  CELImplementation.ipynb  CEL_Development.ipynb  CEL_Implementation.ipynb  README.rst  celdemo.py  complex_policy.ipynb  resource.json  resource1.json
docs/: Makefile  index.html  make.bat
docs/source/: api.rst  c7n_functions.rst  cli.rst  conf.py  configuration.rst  development.rst  index.rst  installation.rst  integration.rst  structure.rst
features/: Makefile  README.rst  basic.feature  bc.feature  bindings_ext.feature  block_ext.feature  c7n_interface.feature  comparisons.feature  conversions.feature  dynamic.feature  encoders_ext.feature  enums.feature  environment.py  error_propagation.feature  expr_test_bc.feature  fields.feature  fp_math.feature  integer_math.feature  json_query.feature  lists.feature  logic.feature  logic.textproto  macros.feature  macros2.feature  math_ext.feature  namespace.feature  optionals.feature  parse.feature  plumbing.feature  proposed.feature  proto2.feature  proto2_ext.feature  proto3.feature  string.feature  string_ext.feature  timestamps.feature  type_deduction.feature  unknowns.feature  wrappers.feature
features/steps/: c7n_integration.py  cli_binding.py  integration_binding.py
src/cel_python/: __init__.py
src/celpy/: __init__.py  __main__.py  adapter.py  c7nlib.py  cel.lark  celparser.py  celtypes.py  evaluation.py  parser.py
src/celpy/__pyinstaller/: __init__.py  hook-celpy.py
src/xlate/: c7n_to_cel.py
tests/: test_adapter.py  test_c7n_to_cel.py  test_c7nlib.py  test_celtypes.py  test_evaluation.py  test_main.py  test_package.py  test_parser.py  test_transpilation.py
textproto/: basic.feature  basic.interim  conversions.feature  conversions.interim
tools/: Dockerfile  README.rst  gherkin.feature.jinja  gherkinize.py  go.mod  go.sum  mkgherkin.go  pb2g.py  refresh_spec.py  survey_feature_files.ipynb  tags.toml  test_gherkinize.py  test_issue_141.py  test_pb2g.py  test_refresh_spec.py  test_survey.ipynb  test_textproto.lark  textproto.lark  textproto_to_gherkin.py  wip.toml  wip.txt
type_check/: lineprecision.txt
