# Copyright 2020 Capital One Services, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[project]
name = "cel-python"
version = "0.5.1"
description = "Pure Python implementation of Google Common Expression Language"
readme = "README.rst"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
authors = [
    { name = "S.Lott", email = "slott56@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
    # 3.13 needs at least this version, which started publishing wheels for Python 3.13.
    # Ref: https://github.com/google/re2/issues/516
    "google-re2>=1.1.20251105",
    "google-re2>=1.1.20250722; python_version == '3.13'",
    "jmespath>=1.1.0",
    "lark>=1.3.1",
    "pendulum>=3.2.0",
    "pyyaml>=6.0.3",
    "tomli >= 1.1.0 ; python_version < '3.11'",
]

[project.scripts]
cel-python = "cel_python:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/celpy"]

[tool.uv]
required-version = ">=0.7"

[[tool.uv.index]]
url = "https://buf.build/gen/python"

[dependency-groups]
dev = [
    "behave>=1.3.3",
    "coverage>=7.14.0",
    "google-cel-spec-protocolbuffers-pyi",
    "google-cel-spec-protocolbuffers-python",
    "google-re2-stubs",
    "jinja2>=3.1.6",
    "mypy>=2.1.0",
    "protobuf>=6.33.5",
    "pytest-cov>=7.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
    "sphinx>=7.4.7",
    "sphinxcontrib-plantuml>=0.31",
    "sphinxcontrib-programoutput>=0.19",
    "toml>=0.10.2",
    "tox-uv>=1.35.2",
    "tox>=4.54.0",
    "types-protobuf>=6.32.1",
    "types-pyyaml>=6.0.12",
    "types-toml>=0.10.8",
]

[tool.tox]
envlist = ["py310", "py311", "py312", "py313", "lint", "tools"]
minversion = "4.24.0"

[tool.tox.env_run_base]
description = "test suite"
dependency_groups = ["dev"]
setenv = { PYTHONPATH = "./src" }
commands = [
    ["pytest", "-vv"],
    ["pytest", "-v", "--doctest-modules", "src"],
    ["pytest", "-v", "--doctest-modules", "README.rst"],
    ["behave", "--tags=~@wip", "--tags=~@future", "-D", "env='{envname}'", "-f", "rerun", "--stop"],
    ["behave", "--tags=~@wip", "--tags=~@future", "-D", "env='{envname}'", "-D", "runner='compiled'", "-f", "rerun", "--stop"],
    ["python", "-m", "doctest", "{toxinidir}/docs/source/api.rst", "{toxinidir}/docs/source/cli.rst", "docs/source/index.rst", "docs/source/integration.rst"],
    ["pytest", "-v", "-o", "python_classes='PYTest*'", "tools"]
]

[tool.tox.env.tools]
description = "conformance suite conversion tools"
commands = [["pytest", "-v", "tools"]]

[tool.tox.env.wip]
description = "work-in-progress test suite"
commands = [["behave", "--tags=@wip"]]

[tool.tox.env.conformance]
commands = [["behave", "--tags=@conformance", "--tags=~@wip"]]

[tool.tox.env.conformance-compiled]
description = "compiled runner"
commands = [["behave", "--tags=@conformance", "--tags=~@wip", "-D", "runner='compiled'"]]

[tool.tox.env.conformance-wip]
description = "work in progress"
commands = [["behave", "--tags=@conformance", "--tags=@wip"]]

[tool.tox.env.conformance-wip-compiled]
description = "work in progress + compiled runner"
commands = [["behave", "--tags=@conformance", "--tags=@wip", "-D", "runner='compiled'"]]

[tool.tox.env.lint]
description = "check types, formatting, and best practices"
commands = [
    ["mypy", "--lineprecision-report", "type_check", "--strict", "--disable-error-code", "type-arg", "--show-error-codes", "src", "tools"],
    ["ruff", "check", "src", "tools"],
    ["ruff", "format", "--diff", "src", "tools"]
]

[tool.tox.env.coverage]
description = "generate coverage reports"
commands = [
    ["coverage", "erase"],
    ["pytest", "-vv", "-x", "--cov=src", "--cov-report=term-missing"],
    ["coverage", "html"],
    ["coverage", "xml"],
]
